<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/rl_first_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_photo_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:src="@drawable/foto"
            app:civ_border_color="@color/gray"
            app:civ_border_width="1dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_first_name_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/civ_photo_profile">

            <EditText
                android:id="@+id/et_first_name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_last_name_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_first_name_profile"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/civ_photo_profile">

            <EditText
                android:id="@+id/et_last_name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/hint_last_name" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_identification_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_first_content"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/et_identification_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:hint="@string/hint_identification" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_identification_profile"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/rg_genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_genero"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/et_email_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_phone_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@+id/til_email_profile">

        <EditText
            android:id="@+id/et_phone_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:hint="@string/phone" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="@dimen/text_mayus"
        android:layout_below="@+id/til_phone_profile"
        android:text="Change Password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_change_password"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="Password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="Confirm Password" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</RelativeLayout>
