<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:scaleType="centerInside"
        android:background="@color/red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_minus" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/opacityDark"
            android:cursorVisible="true"
            android:hint="@string/user"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/text_mayus" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/opacityDark"
            android:cursorVisible="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/text_mayus" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_rectangle_border_radius"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_subtitle" />

    </LinearLayout>

</LinearLayout>